# lib/api-spec/openapi.yaml
@@ -279,6 +279,10 @@ paths:
           in: query
           required: false
           schema: { type: integer }
+        - name: doctorId
+          in: query
+          required: false
+          schema: { type: integer }
       responses:
         "200":
           description: Records
@@ -338,6 +342,10 @@ paths:
       tags: [prescriptions]
       parameters:
         - name: patientId
+          in: query
+          required: false
+          schema: { type: integer }
+        - name: doctorId
           in: query
           required: false
           schema: { type: integer }
